frontend/style.css
html {
  --body-font: 'Noto Sans', sans-serif;
  --heading-font: 'Inter', sans-serif;
}

#container {
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  padding-top: 96px;
  padding-bottom: 16px;
}

#as_who {
  font-weight: bold;
}

input, textarea {
  background-color: inherit;
  appearance: none;
  -webkit-appearance: none;
  outline: none;
  border: none;
  color: #333;
}

input[type=button],
input[type=submit] {
  border: 0;
  padding: 0;
  font-family: var(--heading-font);
  font-weight: bold;
  color: #ff007f;
  cursor: pointer;
}

input[type=button]:active,
input[type=button]:hover,
input[type=button]:focus,
input[type=submit]:active,
input[type=submit]:hover,
input[type=submit]:focus {
  color: #333;
}

::placeholder {
  color: hsl(330deg, 50%, 75%);
}

html {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  width: 100%;
  margin: 0;
  height: 100%;
  padding: 0;
  color: hsl(0deg, 0%, 25%);
  font-family: var(--body-font);
  font-size: 16px;
  background-color: hsl(330deg, 50%, 97%);
  overflow-y: scroll;
  caret-color: #ff007f;
}

.card {
  box-sizing: border-box;
  margin: 16px;
  margin-top: 0px;
  padding: 16px;
  background: white;
  border: 2px solid hsl(330deg, 50%, 80%);
  border-radius: 4px;
  overflow-x: auto;
}

#container > .card:last-child {
  margin-bottom: 0;
}

.card .title {
  display: block;
  width: 100%;
  position: relative;
}

.card .info {
  font-size: 16px;
}

.card .scope {
  color: #777;
}

.card .body {
  line-height: 24px;
  margin: 0;
}

.notes {
  padding-top: 16px;
}

.notes :last-child {
  padding-bottom: 16px;
}

#login input[type="text"],
#login input[type="password"] {
  width: 50%;
  font-family: inherit;
  font-size: inherit;
  margin: 0 auto;
  padding: 2px;
  border-bottom: 1px solid #aaa !important; /* hotfix */
}

#login_username, #login_password {
  padding: 3px 0;
  /* 32 px = 26 px (bounding box) + 2 * _3px_ */
}

.note input,
#login input[type="text"],
#login input[type="password"],
#create input[type="text"],
#create textarea {
  display: block;
  border: none;
  border-radius: 0;
}

#create input[type="text"] {
  line-height: 32px;
}

#create input[type="text"],
#create textarea {
  padding: 0;
  border: none;
  resize: none;
  box-sizing: border-box;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
}

#create textarea {
  font-family: var(--body-font);
  font-size: 16px;
  line-height: 24px;
  padding: 0;
  resize: none;
  overflow: hidden;
  padding-bottom: 16px;
}

p.new_note.note input[type="text"] {
  box-sizing: border-box;
  width: 100%;
  font-family: inherit;
  font-size: inherit;
  margin: 0;
  padding: 0;
}

span.controls-left {
  float: left;
  font-size: 12px;
  margin-top: 8px;
}

.controls {
  display: block;
  font-size: 12px;
  height: 18px;
  margin: 6px 0 0 auto;
  display: block;
  width: fit-content;
  width: -moz-fit-content;
  height: fit-content;
  height: -moz-fit-content;
  text-align: right;
}

.controls > li {
  display: inline-block;
  /* padding-top: 2px; */
  height: 16px;
}

.controls > li input[type="button"], 
.controls > li input[type="submit"] {
  font-size: 12px; /* !important it is */
}

.controls > li::before {
  content: '•';
  height: 14px;
  width: 12px;
  text-align: center;
  padding: 0 2px;
  font-family: var(--heading-font);
}

.controls > li:first-child::before {
  visibility: hidden;
}

h2, .name {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 24px;
  font-family: var(--heading-font);
  color: #333;
  display: inline-block;
}

.word_id {
  color: #333;
  text-decoration: underline;
}

.note {
  font-size: 12px;
  line-height: 16px;
  color: #333;
  text-indent: -15px;
  padding-left: 15px;
  margin: 0;
  padding-bottom: 0;
  padding-top: 0;
}

.hl {
  color: #fff;
  background-color: #333;
}

.note .hl {
  color: #ffffff;
  background-color: #333;
}

.note-author::after {
  content: ": ";
}

#main {
  overflow: hidden;
  box-sizing: border-box;
  margin: 0;
  width: 100%;
  padding-bottom: 10px;
}

#menu {
  position: fixed;
  top: 0;
  box-sizing: border-box;
  height: 82px; /* 10px + 16px + 54px + 2px */
  width: 100%;
  z-index: 1000;
  padding: 0;
  margin: 0;
  background-color: hsl(210deg, 50%, 97%);
  border: 2px solid hsl(210deg, 50%, 80%);
  border-radius: 0px 0px 4px 4px;
}

#search {
  box-sizing: border-box;
  display: inline;
  width: calc(100% - 2 * 54px - 2 * 10px);
  height: 54px;
  margin: 0 10px;
  outline: none;
  font-size: 24px;
  border: none;
  font-family: var(--heading-font);
  text-align: center;
  color: hsl(210deg, 50%, 25%);
  padding: 10px 0 15px 0;
  vertical-align: top;
}

#search::placeholder {
  color: hsl(210deg, 50%, 75%);
}

#search-row input[type=button] {
  height: 54px;
  width: 54px;
  font-size: 24px;
  font-family: var(--body-font);
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  padding-bottom: 5px;
}

#control-row {
  height: 16px;
  width: 100%;
  overflow-x: auto;
  margin: 0;
  padding-top: 10px;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

#control-row::-webkit-scrollbar {
  display: none;
}

#top-controls {
  width: max-content;
  width: -moz-max-content;
  height: 16px;
  overflow-y: hidden;
  padding: 0 12px;
  margin: 0 auto;
  line-height: 16px;
  color: hsl(210deg, 25%, 50%);
}

#top-controls li:first-child::before {
  display: none;
}

#top-controls input {
  color: hsl(210deg, 75%, 25%);
}

#top-controls input[type=button]:active,
#top-controls input[type=button]:hover,
#top-controls input[type=button]:focus,
#top-controls input[type=submit]:active,
#top-controls input[type=submit]:hover,
#top-controls input[type=submit]:focus {
  color: black;
}

#top-controls #scope-editor {
  color: hsl(210deg, 75%, 25%);
  font-family: var(--heading-font);
  font-weight: bold;
}

h1, h2, h3 {
  font-family: var(--heading-font);
  font-weight: 300;
}

h2 {
  font-size: 24px;
}

a {
  text-decoration: none;
  color: #ff007f;
}

/* 512px + 2 * 16px + (scrollbar) 17px */

@media(min-width: 562px) {
  .card {
    margin-left: auto;
    margin-right: auto;
    width: calc(512px - 2 * 16px);
  }

  #menu {
    left: calc((100% - 512px) / 2 - 2px);
    width: 516px; /* 512px + 4px */
    border-top-width: 0;
  }
}

@media(max-width: 561px) {
  .card {
    width: calc(100% - 2 * 16px);
  }

  #menu {
    width: 100%;
    border-width: 0px 0px 2px 0px;
    border-radius: 0;
  }
}

